--- a/pom.xml
+++ b/pom.xml
@@ -7,43 +7,68 @@
 	<version>8.2.0</version>
 	<name>Java Home myweb</name>
 	<url>http://maven.apache.org</url>
-	
+
 	<properties>
 		<docker.image.prefix>kammana</docker.image.prefix>
 		<sonar.host.url>http://3.111.171.22:9000/</sonar.host.url>
-
+		<java.version>1.8</java.version> <maven.compiler.source>${java.version}</maven.compiler.source>
+		<maven.compiler.target>${java.version}</maven.compiler.target>
 	</properties>
-	<dependencies>
 
-		
+	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>3.8.1</version>
-			<scope>test</scope>
+			<version>4.13.2</version> <scope>test</scope>
 		</dependency>
-
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>3.1.0</version>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
-	
+
 	<distributionManagement>
-		 <snapshotRepository>
-		    <id>nexus</id>
-		    <url>http://52.66.199.183:8081/repository/sample-snapshots/</url>
-		 </snapshotRepository>
-		
+		<snapshotRepository>
+			<id>nexus</id>
+			<url>http://52.66.199.183:8081/repository/sample-snapshots/</url>
+		</snapshotRepository>
+
 		<repository>
-		    <id>nexus</id>
-		    <url>http://52.66.199.183:8081/repository/sample-releases/</url>
+			<id>nexus</id>
+			<url>http://52.66.199.183:8081/repository/sample-releases/</url>
 		</repository>
-  	</distributionManagement>
-	
+	</distributionManagement>
+
 	<pluginRepositories>
-	    <pluginRepository>    
-		<id>maven1</id>
-		<name>Maven.org</name>
-		<url>http://repo1.maven.org/maven2</url>
-	    </pluginRepository>
+		<pluginRepository>
+			<id>maven1</id>
+			<name>Maven.org</name>
+			<url>http://repo1.maven.org/maven2</url>
+		</pluginRepository>
 	</pluginRepositories>
 
-	
+	<build>
+		<finalName>${project.artifactId}-${project.version}</finalName>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.8.1</version>
+				<configuration>
+					<source>${java.version}</source>
+					<target>${java.version}</target>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-war-plugin</artifactId>
+				<version>3.3.1</version>
+				<configuration>
+					<failOnMissingWebXml>false</failOnMissingWebXml> </configuration>
+			</plugin>
+			</plugins>
+	</build>
+
 </project>
